<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC Project</string>
    <string name="settings">Settings</string>
    <string name="admin">Admin</string>
    <string name="write"></string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="wep">WEP</string>
    <string name="wpa">WPA/WPA2</string>
    <string name="none">None</string>
    <string name="write_tag">Write to tag</string>
    <string name="hidden_network">Hidden Network</string>
    <string name="title_activity_write_to_tag">WriteToTag</string>
    <string-array name="eap_methods">
        <item>None</item>
        <item>WEP</item>
        <item>WPA/WPA2 PSK</item>
        <item>802.1x EAP</item>
    </string-array>
    <string name="two_fac_auth">Two-Factor Authentication</string>
    <string name="two_fac_pw">Two-Factor Password</string>
    <string name="pw_gen_button_prompt">Generate New Router Password</string>
    <string name="router_pw_prompt">New Router Password</string>
    <string name="copy_button_desc">Copy New Router Password</string>
    <string name="read_screen_prompt">Connect to NFC tag at any time</string>

</resources>
