<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.nfcproject.WriteToTag"
    tools:ignore="MergeRootFrame" >
    
    <EditText
        android:id="@+id/ssidField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="2"
		android:hint="@string/ssid" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/password"/>

    <Spinner
        android:id="@+id/eap_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:entries="@array/eap_methods"/>

    <CheckBox
        android:id="@+id/isHiddenCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/hidden_network" />
    
 </LinearLayout>

