<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nfc_settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/readScreenPromptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/read_screen_prompt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/readScreenPromptText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:src="@drawable/contactless" />

    <EditText
        android:id="@+id/twoFacPwField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/readScreenPromptText"
        android:layout_alignRight="@+id/readScreenTwoFac"
        android:layout_below="@+id/readScreenTwoFac"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/two_fac_pw"
        android:inputType="textPassword" >

    </EditText>

    <CheckBox
        android:id="@+id/readScreenTwoFac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/readScreenPromptText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/two_fac_auth" />

</RelativeLayout>